# zero-chex

./: .pre-commit-config.yaml  ARCHITECTURE.md  CHEX_TODO.md  COMPLIANCE.md  README.md  SEMANTIC_PLAN.md  TEST_OG_PLAN.md  TODO_PLAN.md  chex_api_snapshot.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: check_3rdparty_deps.py  check_api_parity.py  check_compliance.py  check_test_parity.py  update_badges.py
src/zero_chex/: __init__.py  core.py
src/zero_chex/_src/: classes.py  misc.py  tree_util.py  types.py
src/zero_chex/_src/asserts/: basic.py  scalar.py  tensors.py  trees.py
tests/: conftest.py  test_all_mock.py  test_basic.py  test_chex.py  test_classes.py  test_coverage_classes.py  test_coverage_disable_asserts.py  test_coverage_disable_asserts_more.py  test_coverage_misc.py  test_coverage_tensors.py  test_coverage_tensors_disable.py  test_coverage_tree_util.py  test_coverage_trees.py  test_coverage_trees_disable.py  test_misc.py  test_scalar.py  test_tensors.py  test_trees.py  test_types.py
