[project]
name = "zero_chex"
version = "0.1.90"
description = "A compliance-focused implementation of chex"
requires-python = ">=3.9"
dependencies = [
    "zero_jax",
    "numpy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
]

[tool.pytest.ini_options]
addopts = "--cov=zero_chex --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.venv*",
  "/.pytest_cache",
  "/.ruff_cache",
  "/.git",
]
