[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "zero_chex"
version = "0.1.90"
description = "A compliance-focused implementation of chex"
requires-python = ">=3.9"





[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "pre-commit",
    "interrogate",
    "numpy"
]




[tool.pytest.ini_options]
pythonpath = "src"
addopts = "--cov=src --cov-fail-under=50"






